Allow PCUI to support multiple Pcluster versions (#418)
* Modify cloudformation template and api handler to create multiple api stack for each version and handle the mapping of version to invoke url

* Add version field to cluster create

* Add dropdown menu to select the image version for the Official Images page

* Add a version page to create cluster with a version dropdown menu and load version when creating cluster from an existing cluster

* Fix location of the version dropdown menu on the official images page

* Modify unit tests to account for multiple pcluster versions

* Modify demo environment to work with multiple pcluster versions

* Fix cluster update

* fix frontend tests

* Use set for version comparison

* Add version field test

* Add backend test for invoke url mapping

* Fix official images version dropdown menu

* Wrap url mapping logic in a function

* Add cluster version selection to custom image build.

* fix create cluster from template

* Scope down permissions

* Fix formatting

* Handle duplicate versions

* Fix create version issue

* Account for fix of path traversal vulnerability

* Add images unit tests

* Scope down ApiVersionMap permissions

* Change ui api id tag

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -101,7 +101,7 @@
     "ariaLabel": "Info"
   },
   "cluster": {
-    "editAlert": "This cluster cannot be edited as it was created using a different version of AWS ParallelCluster.",
+    "editAlert": "This cluster cannot be edited as it was created using an incompatible version of AWS ParallelCluster.",
     "tabs": {
       "details": "Details",
       "instances": "Instances",
@@ -492,6 +492,18 @@
       "stepNumberLabel": "Step {{stepNumber}}",
       "collapsedStepsLabel": "Step {{stepNumber}} of {{stepsCount}}",
       "steps": "Steps"
+    },
+    "version": {
+      "label": "Cluster Version",
+      "title": "Version",
+      "placeholder": "Cluster version",
+      "description": "Select the AWS ParallelCluster version to use for this cluster.",
+      "help": {
+        "main": "Choose the version of AWS ParallelCluster to use for creating and managing your cluster."
+      },
+      "validation": {
+        "versionSelect": "You must select a version."
+      }
     },
     "cluster": {
       "title": "Cluster",
@@ -1407,6 +1419,8 @@
     },
     "dialogs": {
       "buildImage": {
+        "versionLabel": "Version",
+        "versionPlaceholder": "Select version",
         "closeAriaLabel": "Close",
         "title": "Image configuration",
         "cancel": "Cancel",
@@ -1429,6 +1443,14 @@
         "title": "AWS ParallelCluster support policy",
         "href": "https://docs.aws.amazon.com/parallelcluster/latest/ug/support-policy.html"
       }
+    },
+    "actions": {
+      "versionSelect": {
+        "selectedAriaLabel": "Selected version",
+        "versionText": "Version {{version}}",
+        "placeholder": "Select a version"
+      },
+      "refresh": "Refresh"
     },
     "list": {
       "columns": {
